# emagrecimento

./: .dockerignore  .gitignore  AGENTS.md  DEPLOY.md  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.cursor/: README.md
.cursor/commands/: add-pdf-metric.md  code-review.md  extract-cli.md  run-tests.md  start-server.md
.cursor/rules/: core-standards.mdc  frontend.mdc  python-clean-arch.mdc  tests.mdc
.cursor/skills/emagrecimento-workflows/: SKILL.md
.cursor/skills/pdf-parser-patterns/: SKILL.md
data/NOVO/: Aderência Semanal_vini.txt  Resumo-da-alimentação-2026-01-19-a-2026-03-06.csv  Resumo-das-medidas-2026-01-19-a-2026-03-06.csv  Resumo-dos-exercícios-2026-01-19-a-2026-03-06.csv
data/sibele/: AderenciaSemanalSibele  Resumo-da-alimentação-2026-01-19-a-2026-03-06.csv  Resumo-das-medidas-2026-01-19-a-2026-03-06.csv  Resumo-dos-exercícios-2026-01-19-a-2026-03-06.csv
scripts/: README.md  extract_cutting_report.py
src/emagrecimento/: __init__.py  container.py
src/emagrecimento/application/: __init__.py  chatgpt_export.py  interfaces.py  serialization.py
src/emagrecimento/domain/: __init__.py  (+4 more)
static/css/: style.css
static/js/: app.js  storage.js
templates/: index.html
tests/: __init__.py  conftest.py
tests/integration/: test_api_process.py  test_dashboard_ui.py  test_zip_extraction.py
tests/unit/: test_build_report.py  test_chatgpt_export.py  test_compute_adherence_targets.py  test_export_filename.py  test_extract_user_info.py  test_pdf_metrics_parser.py  test_serialization.py  test_value_objects.py
(+23 files in other folders)
